welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: '=' expected but ';' found.
  for (i<-1 to len(nums)-1) 
^indexOfValue:6: error: ']' expected but '(' found.
    valeur = nums[ len(nums) -1]
                      ^